--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   glassmorphism: ^3.0.0
+  path_provider: ^2.1.2
+  share_extend: ^2.0.0
+  image_gallery_saver: ^2.0.3
 
 dev_dependencies:
   flutter_test:
