--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  glassmorphism: ^3.0.0
-  path_provider: ^2.1.2
+  path_provider:
   share_extend: ^2.0.0
   image_gallery_saver: ^2.0.3
 
